<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7E1FC498">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="414dp"
        android:layout_height="829dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icons_list"
        tools:ignore="ImageContrastCheck,VisualLintBounds" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="330dp"
        android:layout_height="251dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035"
        app:srcCompat="@drawable/directions_amico__2_"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="346dp"
        android:layout_height="547dp"
        android:background="@drawable/rounded_container"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.849"
        app:layout_constraintWidth_percent="0.3">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingTop="10sp"
            android:layout_marginBottom="10sp"
            android:text="@string/let_s_get_started"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8sp"
            android:text="@string/create_an_account"
            android:textAlignment="center"
            android:textColor="#00695C" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="25sp"
            android:autofillHints="Enter email"
            android:background="#B0FFFFFF"
            android:drawableStart="@android:drawable/sym_action_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editTextFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="25sp"
            android:autofillHints="Enter full name"
            android:background="#B0FFFFFF"
            android:drawableStart="@drawable/name"
            android:drawableTint="#E6E6E6"
            android:hint="@string/full_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="25sp"
            android:autofillHints="Enter Password"
            android:background="#B0FFFFFF"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="25sp"
            android:autofillHints="Confirm Password"
            android:background="#B0FFFFFF"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="205dp"
        android:layout_height="52dp"
        android:background="@drawable/rounded_button"
        android:text="@string/create_account"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:icon="@drawable/icons8_create_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77" />

</androidx.constraintlayout.widget.ConstraintLayout>
